syntax="proto3";
package IM;


message OfflineCach
{
    int64 user_id			= 1; // 用户id
    repeated OfflineMessage messages 	= 2; // 离线消息集合
}


message OfflineMessage
{
    int64 	send_id			= 1; // 发送者id
    string 	content			= 2; // 离线内容
    string	send_time		= 3; // 发送时间
}
